--- a/src/components/Homepage/Navbar/Navbar.css
+++ b/src/components/Homepage/Navbar/Navbar.css
@@ -33,3 +33,8 @@
     color: white !important;
     /* background-color: red !important; */
 }
+
+.login{
+    background-color: #808CBC;
+    border-radius: 5px;
+}
